Css correction for module (z-index for cassopedia)

--- a/modules/mod_flexicontent/tmpl_common/module.css
+++ b/modules/mod_flexicontent/tmpl_common/module.css
@@ -7,6 +7,7 @@
 	top: 0;
 	left: 0;
 	margin:0 0 24px 0;
+	z-index: 1;
 }
 
 /* All elements */
